<resources>
    <!-- Recursos comunes -->
    <string name="wrapsy">Wrapsy</string>

    <!-- Pantalla de Login -->
    <string name="welcome_back">Welcome back to</string>
    <string name="login_to_start">Log in to start</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Password</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="use_facebook">Use Facebook</string>
    <string name="use_gmail">Use Gmail</string>
    <string name="confirm">Confirm</string>

    <!-- Pantalla Main -->
    <string name="app_name">Wrapsy</string>
    <string name="slogan">Slogan</string>
    <string name="btn_sign_up">Sign up</string>

    <!-- Pantalla SingUpActivity -->
    <string name="signup_welcome">Welcome to Wrapsy</string>
    <string name="signup_subtitle">Sign up to start</string>
    <string name="hint_name">Your name</string>
    <string name="hint_username">Username</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_log_in">Log in</string>

    <!-- Pantalla Sign up Address -->
    <string name="address_title">Address</string>
    <string name="hint_country">Country</string>
    <string name="hint_state">State</string>
    <string name="hint_city">City</string>
    <string name="hint_zip">Zip</string>
    <string name="hint_full_address">Address</string>
    <string name="btn_continue">Continue</string>

    <!-- Pantalla Save Item -->
    <string name="save_item">Save item</string>
    <string name="wishlist">Wishlist</string>
    <string name="list">List</string>
    <string name="my_lists">My Lists</string>
    <string name="see_later">See later</string>
    <string name="christmas_2025">Christmas 2025</string>
    <string name="offers">Offers</string>
    <string name="stores">Stores</string>
    <string name="orders">Orders</string>
    <string name="coupons">Coupons</string>
    <string name="profile">Profile</string>

    <!-- Pantalla review -->
    <string name="rating">Rating</string>
    <string name="comment">Comment</string>
    <string name="leave_comment">Leave us a comment</string>
    <string name="submit_btn">Submit</string>

    <!-- Pantalla de invitaciones y links-->
    <string name="cancel_btn">Cancel</string>
    <string name="invite_friend">Invite a friend</string>

    <!-- Pantalla order-->
    <string name="details">Details</string>
    <string name="status">Status: Shipped</string>
    <string name="order_number">Order Number: #123456789</string>
    <string name="quantity">Quantity: 1 items</string>
    <string name="order_date">Order Date: March 20, 2025</string>
    <string name="estimated_delivery">Estimated Delivery: March 30, 2025</string>
    <string name="total_cost">Total Cost: $30 USD</string>
    <string name="status2">Shipped</string>
    <string name="titulo_regalo_producto">Heisenberg</string>
    <string name="informacion_fecha_llegada">Its almost there 4th May</string>

    <!-- Pantalla notificaciones-->
    <string name="notify">Sale on AMAZON, wachale!!!</string>

    <!-- Pantalla info lista-->
    <string name="titulo_lista">See later</string>
    <string name="titulo_lista2">My list</string>
    <string name="buy_btn">Buy</string>

    <string name="nombre_variable">Razer Audifonos</string>

    <!-- Pantalla activity_stores -->
    <string name="gifts">Gifts</string>
    <string name="filters">Filters</string>
    <string name="search">Search</string>
    <string name="store_details">Details ></string>
    <string name="store_balloons">Balloons ></string>
    <string name="store_plush_toys">Plush toys ></string>
    <string name="store_mugs">Mugs ></string>
    <string name="basket_total_gift">Anastasia Beverly Hills</string>
    <string name="basket_total_desc">Lip velvet liquid lipstick</string>
    <string name="basket_total_total">$740</string>
    <string name="basket_total_finale">Total: $740</string>

    <!-- Pantalla activity_producto_details -->
    <string name="save_item_link">Save item</string>
    <string name="item_rating">Rating</string>
    <string name="comments">Comments</string>
    <string name="add_to_basket">Add to basket</string>


    <!-- Pantalla activity_profile -->
    <string name="app__name">MiAplicacion</string>
    <string name="shopping_basket">Shopping basket</string>
    <string name="menu">Menu</string>
    <string name="options">Options</string>
    <string name="john_felix">John Felix</string>
    <string name="lists">Lists</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="wishlistt">WHISHLIST</string>
    <string name="sombras">Sombras</string>
    <string name="princesa_ariel">Princesa Ariel</string>
    <string name="under_armour_ro">Under Armour Ro</string>
    <string name="muneco_lego">Muñeco lego</string>
    <string name="gloss_bomb">Gloss Bomb</string>
    <string name="perfume_mel">Perfume Mel</string>

    <!-- Pantalla activity_profile_edit_profile -->
    <string name="profile_picture">Profile picture:</string>
    <string name="upload_file">Upload file...</string>
    <string name="username">Username:</string>
    <string name="edit">edit</string>
    <string name="save_changes">Save changes</string>


    <!-- Pantalla activity_profile_new_list -->
    <string name="new_list_title">NEW LIST</string>
    <string name="list_name">List name:</string>
    <string name="name_here">Name here...</string>
    <string name="under_armour">Under Armour</string>
    <string name="add">Add</string>
    <string name="new_list_button">New list</string>

    <!-- Pantalla activity_profildlists-->
    <string name="flores_tejidas">Flores tejidas</string>
    <string name="pomada">Pomada</string>
    <string name="new_list">New list</string>

    <!-- Pantalla activity_more_options-->
    <string name="purchase_history">Purchase History</string>
    <string name="payment_options">Payment Options</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log out</string>

    <!-- Pantalla activity_more_optionspayment_options-->
    <string name="payments_options">Payments Options</string>
    <string name="card_information">Card Information</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>


    <string name="cardholder">John Felix Anthony cena</string>
    <string name="card_numbers">**** **** **** 9843</string>

    <string name="default_web_client_id">147493623866-qtdltfhk3vq1ujs0u5vhjah86mj7cru8.apps.googleusercontent.com</string>

</resources>