<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoresActivity"
    android:orientation="vertical"
    android:background="@color/cremaPalido">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <include
                layout="@layout/top_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_wrapsy"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gifts"
                    android:textStyle="bold"
                    android:textSize="32sp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/btn_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/store_details"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="@color/amarillo_dorado"
                        android:layout_marginTop="15dp"
                        android:backgroundTint="@android:color/transparent"/>

                    <GridView
                        android:id="@+id/gv_productos_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="3"
                        android:paddingHorizontal="6dp"/>

                    <TextView
                        android:id="@+id/btn_balloons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/store_balloons"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="@color/amarillo_dorado"
                        android:layout_marginTop="15dp"
                        android:backgroundTint="@android:color/transparent"/>

                    <GridView
                        android:id="@+id/gv_productos_balloons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="3"
                        android:paddingHorizontal="6dp"/>

                    <TextView
                        android:id="@+id/btn_plush_toys"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/store_plush_toys"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="@color/amarillo_dorado"
                        android:layout_marginTop="15dp"
                        android:backgroundTint="@android:color/transparent"/>

                    <GridView
                        android:id="@+id/gv_productos_plush_toys"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="3"
                        android:paddingHorizontal="6dp"/>

                    <TextView
                        android:id="@+id/btn_mugs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/store_mugs"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="@color/amarillo_dorado"
                        android:layout_marginTop="15dp"
                        android:backgroundTint="@android:color/transparent"/>

                    <GridView
                        android:id="@+id/gv_productos_mugs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="3"
                        android:paddingHorizontal="6dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>

    <include
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>