<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    android:background="@color/cremaPalido"
    tools:context=".OrderDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/btn_basket"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:padding="8dp"
                    android:background="@drawable/circleyellow"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_shopping_basket"
                    android:contentDescription="Shopping basket" />

                <ImageView
                    android:id="@+id/btn_notificaciones"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:padding="8dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/circleyellow"
                    android:src="@drawable/ic_notificaciones"
                    android:contentDescription="Menu" />

                <ImageView
                    android:id="@+id/more_options"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="1dp"
                    android:padding="8dp"
                    android:layout_toStartOf="@id/btn_notificaciones"
                    android:layout_centerVertical="true"
                    android:background="@drawable/circleyellow"
                    android:src="@drawable/ic_tres_rayitas"
                    android:contentDescription="Options" />
            </RelativeLayout>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_wrapsy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#333333"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginBottom="60dp"
                android:padding="8dp">

                <LinearLayout
                    android:id="@+id/ll_gifts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="Details"
                    android:textColor="#F5C518"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_status_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/status"
                    android:textColor="#333333"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_order_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/order_number"
                    android:textColor="#333333"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/quantity"
                    android:textColor="#333333"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_order_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/order_date"
                    android:textColor="#333333"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_estimated_delivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/estimated_delivery"
                    android:textColor="#333333"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_total_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/total_cost"
                    android:textColor="#333333"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>