<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailActivity"
    android:orientation="vertical"
    android:background="@color/cremaPalido">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Menu de arriba bien insano-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_basket"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/circleyellow"
                    android:src="@drawable/ic_shopping_basket"
                    android:scaleType="center"
                    android:layout_margin="8dp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <ImageButton
                    android:id="@+id/btn_tres_rayitas"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/circleyellow"
                    android:src="@drawable/ic_tres_rayitas"
                    android:scaleType="center"
                    android:layout_margin="8dp"
                    />

                <ImageButton
                    android:id="@+id/btn_notificaciones"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/circleyellow"
                    android:src="@drawable/ic_notificaciones"
                    android:scaleType="fitCenter"
                    android:padding="5dp"
                    android:layout_margin="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_wrapsy"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gifts"
                    android:textStyle="bold"
                    android:textSize="32sp"/>

                <TextView
                    android:id="@+id/tv_filters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_item_link"
                    android:textColor="@color/blue"
                    android:textColorLink="@color/blue"
                    android:autoLink="web"
                    android:clickable="true"
                    android:focusable="true"
                    android:textAllCaps="false"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_gift_image_cell"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/rimel_costoso"/>

                <TextView
                    android:id="@+id/tv_gift_name_cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Anastasia Beverly Hills"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tv_gift_desc_cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lip velvet liquid lipstick"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_gift_price_cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$740"
                    android:textSize="25sp"/>

                <Button
                    android:id="@+id/btn_add_to_basket"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/verdeOlivo"
                    android:layout_marginTop="30dp"
                    app:cornerRadius="8dp"
                    android:text="@string/add_to_basket"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textStyle="bold"
                    android:textColor="@color/amarillo_dorado"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/tv_gift_rating_cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9.7"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:textStyle="bold"
                    android:textColor="@color/amarillo_dorado"
                    android:textSize="25sp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>