<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="3dp"
    android:background="@color/cremaPalido"
    android:layout_height="match_parent"
    tools:context=".BasketTotalActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="70dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <ImageButton
                    android:id="@+id/btn_tres_rayitas"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/circleyellow"
                    android:src="@drawable/ic_tres_rayitas"
                    android:scaleType="center"
                    android:layout_margin="8dp"
                    />

                <ImageButton
                    android:id="@+id/btn_notificaciones"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/circleyellow"
                    android:src="@drawable/ic_notificaciones"
                    android:scaleType="fitCenter"
                    android:padding="5dp"
                    android:layout_margin="8dp"/>
            </LinearLayout>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_wrapsy"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wrapsy"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#333333"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_date"
                    android:textSize="16sp"
                    android:textColor="#333333"
                    android:layout_marginBottom="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:elevation="2dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/rimel_costoso"
                        android:layout_marginEnd="16dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/basket_total_gift"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textColor="#333333" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/basket_total_desc"
                            android:textSize="14sp"
                            android:textColor="#666666" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/basket_total_total"
                            android:textSize="18sp"
                            android:textColor="#333333"
                            android:textStyle="bold"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basket_total_finale"
                    android:textSize="16sp"
                    android:paddingLeft="70dp"
                    android:layout_gravity="left"
                    android:textColor="#333333"
                    android:layout_marginTop="16dp" />

                <Spinner
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"

                    android:background="@color/verdePastelSuave"
                    android:padding="8dp"
                    android:spinnerMode="dropdown" />


                <androidx.cardview.widget.CardView
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/btn_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/verdeOlivaGrisaceo"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="Confirm"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>